--- a/config/crd/bases/batch.x-k8s.io_jobsets.yaml
+++ b/config/crd/bases/batch.x-k8s.io_jobsets.yaml
@@ -54,11 +54,6 @@ spec:
                       required:
                       - enableDNSHostnames
                       type: object
-                    replicas:
-                      description: Replicas is the number of identical replicas of
-                        this job.
-                      format: int32
-                      type: integer
                     template:
                       description: Template defines the template of the Job that will
                         be created.
@@ -2552,7 +2547,8 @@ spec:
                                                   that are used by this container.
                                                   \n This is an alpha field and requires
                                                   enabling the DynamicResourceAllocation
-                                                  feature gate. \n This field is immutable."
+                                                  feature gate. \n This field is immutable.
+                                                  It can only be set for containers."
                                                 items:
                                                   description: ResourceClaim references
                                                     one entry in PodSpec.ResourceClaims.
@@ -4189,7 +4185,8 @@ spec:
                                                   that are used by this container.
                                                   \n This is an alpha field and requires
                                                   enabling the DynamicResourceAllocation
-                                                  feature gate. \n This field is immutable."
+                                                  feature gate. \n This field is immutable.
+                                                  It can only be set for containers."
                                                 items:
                                                   description: ResourceClaim references
                                                     one entry in PodSpec.ResourceClaims.
@@ -5869,7 +5866,8 @@ spec:
                                                   that are used by this container.
                                                   \n This is an alpha field and requires
                                                   enabling the DynamicResourceAllocation
-                                                  feature gate. \n This field is immutable."
+                                                  feature gate. \n This field is immutable.
+                                                  It can only be set for containers."
                                                 items:
                                                   description: ResourceClaim references
                                                     one entry in PodSpec.ResourceClaims.
@@ -8064,7 +8062,9 @@ spec:
                                                               an alpha field and requires
                                                               enabling the DynamicResourceAllocation
                                                               feature gate. \n This
-                                                              field is immutable."
+                                                              field is immutable.
+                                                              It can only be set for
+                                                              containers."
                                                             items:
                                                               description: ResourceClaim
                                                                 references one entry
@@ -9417,7 +9417,6 @@ spec:
                   required:
                   - name
                   - network
-                  - replicas
                   type: object
                 type: array
                 x-kubernetes-list-map-keys:
