--- a/config/crd/bases/batch.x-k8s.io_jobsets.yaml
+++ b/config/crd/bases/batch.x-k8s.io_jobsets.yaml
@@ -48,13 +48,16 @@ spec:
                         job.
                       properties:
                         enableDNSHostnames:
-                          description: EnableDNSHostnames allows pods to be reached
-                            via their hostnames.
+                          description: 'EnableDNSHostnames allows pods to be reached
+                            via their hostnames. Pods will be reachable using the
+                            fully qualified pod hostname, which is in the format:
+                            <jobSet.name>-<spec.replicatedJob.name>-<job-index>-<pod-index>.<jobSet.name>-<spec.replicatedJob.name>-<job-index>'
                           type: boolean
                       type: object
                     replicas:
-                      description: Replicas is the number of jobs that will be created
-                        from this ReplicatedJob's template.
+                      description: 'Replicas is the number of jobs that will be created
+                        from this ReplicatedJob''s template. Jobs names will be in
+                        the format: <jobSet.name>-<spec.replicatedJob.name>-<job-index>'
                       type: integer
                     template:
                       description: Template defines the template of the Job that will
